code cleaning performed and warning removed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">JoeGlass_CE06</string>
+    <string name="app_name">JAV2 CE06 Download Service</string>
     <string name="please_download_images">Please Download Images</string>
     <string name="download">Download</string>
 </resources>
